--- a/templates/Home.html
+++ b/templates/Home.html
@@ -12,7 +12,10 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap"
       rel="stylesheet"
     />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      rel="stylesheet"
+    />
     <style>
       body {
         padding-top: 20px;
@@ -24,28 +27,28 @@
         padding: 20px;
         border-radius: 8px;
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        margin: auto; /* Center container on the page */
       }
-      h1, h2, h3 {
+      h1,
+      h2,
+      h3 {
         font-family: "Roboto", sans-serif;
         color: #007bff;
-        text-shadow: 2px 2px 4px rgba(0,0,0,0.2);
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
         letter-spacing: 1.5px;
         word-spacing: 3px;
         text-align: center;
-      }
-      .form-control, .btn, .form-control-file {
-        margin-top: 10px;
       }
       .required-icon {
         color: red;
         margin-left: 5px;
       }
-      .legend {
-        margin-top: 20px;
-        background-color: #e9ecef;
-        padding: 10px;
-        border-radius: 5px;
-        color: #495057;
+      .legend,
+      .progress,
+      .btn,
+      .form-control-file {
+        margin-top: 10px;
+        margin-bottom: 10px;
       }
       .disabled-input {
         pointer-events: none;
@@ -56,9 +59,16 @@
   <body>
     <div class="container">
       <h1>Welcome to GraphSAGE</h1>
-        <form id="fileUploadForm" action="/user_upload" method="post" enctype="multipart/form-data" class="mt-4">
-        <div style="display: flex; flex-direction: column; align-items: center; justify-content: center;">
-        <div class="form-group">
+      <form
+        id="fileUploadForm"
+        action="/user_upload"
+        method="post"
+        enctype="multipart/form-data"
+      >
+        <div
+          class="form-group"
+          style="margin-top: 20px; marign-bottom: 30px; margin-left: 30%"
+        >
           <input
             type="file"
             class="form-control-file"
@@ -67,9 +77,14 @@
             onchange="disableInputField('employeeFile')"
             required
           />
-          <label for="employeeFile">Employee Document <i class="fas fa-asterisk required-icon"></i></label>
+          <label for="employeeFile"
+            >Employee Document <i class="fas fa-asterisk required-icon"></i
+          ></label>
         </div>
-        <div class="form-group">
+        <div
+          class="form-group"
+          style="margin-top: 20px; marign-bottom: 30px; margin-left: 30%"
+        >
           <input
             type="file"
             class="form-control-file"
@@ -79,37 +94,61 @@
           />
           <label for="relationshipFile">Relationship File </label>
         </div>
+
+        <div id="loadingArea" style="display: none" class="text-center">
+          <div class="progress">
+            <div
+              class="progress-bar progress-bar-striped progress-bar-animated"
+              role="progressbar"
+              style="width: 100%"
+              aria-valuenow="100"
+              aria-valuemin="0"
+              aria-valuemax="100"
+            ></div>
+          </div>
+          <p>Uploading...</p>
         </div>
 
-        <div style="display: flex; justify-content: space-around; align-items: center;">
-        <form id="fileUploadForm" action="/user_upload" method="post" enctype="multipart/form-data" class="mt-4">
-          <button type="submit" class="btn btn-primary" >Confirm Upload</button>
+        <div class="d-flex justify-content-around flex-wrap">
+          <button type="submit" class="btn btn-primary" onclick="uploadFile()">
+            Confirm Upload
+          </button>
+          <button type="button" class="btn btn-danger" onclick="cancelUpload()">
+            Cancel Upload
+          </button>
+          <button
+            id="goVisualizationDataUpload"
+            class="btn btn-info"
+            onclick="window.location.href='/upload_to_vis'"
+          >
+            Go to Analyze
+          </button>
+        </div>
       </form>
-        </button>
-        <button type="button" class="btn btn-danger" onclick="cancelUpload()">
-          Cancel Upload
-        </button>
-      </form>
-      <button
-        id="goVisualizationDataUpload"
-        class="btn btn-info"
-        onclick="window.location.href='/upload_to_vis'"
-      >
-        Go to Analyze
-      </button>
-    </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script>
       function disableInputField(inputField) {
-        document.getElementById(inputField).classList.add('disabled-input');
+        document.getElementById(inputField).classList.add("disabled-input");
       }
       function cancelUpload() {
-          document.getElementById('fileUploadForm').reset();
-          document.getElementById('employeeFile').classList.remove('disabled-input');
-          document.getElementById('relationshipFile').classList.remove('disabled-input');
+        document.getElementById("fileUploadForm").reset();
+        document
+          .getElementById("employeeFile")
+          .classList.remove("disabled-input");
+        document
+          .getElementById("relationshipFile")
+          .classList.remove("disabled-input");
+      }
+
+      function showLoading() {
+        document.getElementById("loadingArea").style.display = "block";
+      }
+
+      function uploadFile() {
+        showLoading();
       }
     </script>
   </body>
