add screen comfirm_edge_upload

--- a/templates/Home.html
+++ b/templates/Home.html
@@ -156,6 +156,10 @@
         }
       }
 
+      function noneEdgeNotification() {
+        alert("Provide your edge may improve process efficiency and accuracy.");
+      }
+
       function disableInputField(inputField) {
         document.getElementById(inputField).classList.add("disabled-input");
       }
