--- a/templates/Home.html
+++ b/templates/Home.html
@@ -54,6 +54,12 @@
         pointer-events: none;
         opacity: 0.5;
       }
+      .goToAnalyze {
+        display: flex;
+        justify-content: right;
+        margin-left: 35px;
+        margin-right: 35px;
+      }
     </style>
   </head>
   <body>
@@ -135,6 +141,7 @@
             Go to Analyze
           </button>
         </div>
+        <small class="goToAnalyze mt-n1 text-muted">Have files already?</small>
       </form>
       <small id="CopyRight" class="form-text text-muted text-center mt-4">
         @CopyRight: Yang Li, Yucheng Wang, Chenfei Zhu, Northeastern University
