--- a/templates/dataProcess.html
+++ b/templates/dataProcess.html
@@ -45,10 +45,29 @@
         border-radius: 5px;
         color: #495057;
       }
+      .btn {
+        display: in-line;
+        height: 50px;
+      }
+      .buttonsLayout {
+        display: flex;
+        justify-content: space-between;
+        flex-direction: row;
+        align-items: center;
+      }
+      .alert {
+        margin-top: 40px;
+      }
     </style>
   </head>
   <body>
     <div class="container">
+      <h2>GraphSAGE Document Processing</h2>
+
+      <div id="processMessage" class="legend" style="display: none">
+        Processing...
+      </div>
+
       {% with messages = get_flashed_messages() %} {% if messages %}
       <div class="alert alert-info" role="alert">
         {% for message in messages %}
@@ -56,41 +75,30 @@
         {% endfor %}
       </div>
       {% endif %} {% endwith %}
-      <h1>GraphSAGE Document Processing</h1>
-
-      <div id="processMessage" class="legend" style="display: none">
-        Processing...
+      <div class="buttonsLayout">
+        <button id="downloadButton" class="btn btn-info mt-3" onclick="downloadProcessedFile()"
+        {% if not session.get('upload_success', False) or not session.get('process_success', False) %}disabled{% endif %}>
+    Download CSV
+</button>
+<button id="goVisualizationDataUpload" class="btn btn-success mt-3" onclick="window.location.href='/upload_to_vis'"
+        {% if not session.get('upload_success', False) or not session.get('process_success', False) %}disabled{% endif %}>
+    Go to Analyze
+</button>
+        <button
+          id="goHomePage"
+          class="btn btn-secondary mt-3"
+          onclick="window.location.href='/'"
+        >
+          Go Back to Upload
+        </button>
       </div>
-      <button
-        id="downloadButton"
-        class="btn btn-success"
-        style="display: none"
-        onclick="downloadProcessedFile()"
-      >
-        Download Processed CSV
-      </button>
-      <button
-        id="goVisualizationDataUpload"
-        class="btn btn-info mt-3"
-        onclick="window.location.href='/upload_to_vis'"
-      >
-        Go to Analyze
-      </button>
-      <button
-        id="goHomePage"
-        class="btn btn-info mt-3"
-        onclick="window.location.href='/'"
-      >
-        Go Back to Upload
-      </button>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script>
-      // Implement the JavaScript functions here as per your functionality requirements
-      function downloadProcessedFile() {
-        window.location.href = "download.php";
+      function showDownloadButton() {
+        document.getElementById("downloadButton").style.display = "block";
       }
     </script>
   </body>
