--- a/templates/Home.html
+++ b/templates/Home.html
@@ -16,6 +16,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
       rel="stylesheet"
     />
+    <link href="/static/styles.css" rel="stylesheet" />
     <style>
       body {
         padding-top: 20px;
@@ -23,11 +24,11 @@
       }
       .container {
         max-width: 600px;
-        background: white;
         padding: 20px;
         border-radius: 8px;
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        margin: auto; /* Center container on the page */
+        background: rgba(255, 255, 255, 0.8);
+        margin: auto;
       }
       h1,
       h2,
