--- a/templates/dataProcess.html
+++ b/templates/dataProcess.html
@@ -20,7 +20,6 @@
       }
       .container {
         max-width: 600px;
-        background: white;
         padding: 20px;
         border-radius: 8px;
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -58,6 +57,8 @@
       }
       .alert {
         margin-top: 40px;
+        background-color: rgba(117, 147, 180, 0.5);
+        border: none;
       }
     </style>
   </head>
