--- a/templates/analyze.html
+++ b/templates/analyze.html
@@ -40,7 +40,7 @@
   </head>
   <body>
     <div class="container text-center">
-      <h1>File Uploaded Successfully!</h1>
+{#      <h1>File Uploaded Successfully!</h1>#}
       <h2>Choose Your Analysis Algorithm</h2>
 
       <!-- Centrality Algorithm Selection -->
