Modified styles for analyze page

--- a/templates/Dendrogram.html
+++ b/templates/Dendrogram.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Dendrogram of Hierarchical Clustering</h1>
+        <h1>Hierarchical Clustering</h1>
         <iframe src="{{ url_for('static', filename=dendrogram_html_filename) }}" height="800" width="100%"></iframe>
 
         <!-- Legend explaining how to interpret the dendrogram -->
