fix download, modify graphSAGE training, add contrastive_loss

--- a/templates/Home.html
+++ b/templates/Home.html
@@ -132,6 +132,7 @@
             type="submit"
             class="btn btn-primary"
             id="confirmUploadBtn"
+            onclick="uploadFile()"
             disabled
           >
             Confirm Upload
