--- a/templates/dataProcess.html
+++ b/templates/dataProcess.html
@@ -23,7 +23,6 @@
         padding: 20px;
         border-radius: 8px;
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-
       }
       h1,
       h2,
@@ -74,7 +73,7 @@
       {% with messages = get_flashed_messages() %} {% if messages %}
       <div class="alert alert-info" role="alert">
         {% for message in messages %}
-        <p>{{ message }}</p>
+        <p><strong>{{ message }}</strong></p>
         {% endfor %}
       </div>
       {% endif %} {% endwith %}
@@ -106,6 +105,7 @@
       function downloadProcessedFile() {
         window.location.href = "/download_processed_file";
       }
+
     </script>
   </body>
 </html>
