--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,94 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Upload Network Data</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
+    <link
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap"
+      rel="stylesheet"
+    />
     <style>
-        body {
-            padding-top: 20px;
-            background: linear-gradient(to right, #ADD8E6 0%, #DDA0DD 100%);
-            color: #fff;
-            font-family: 'Roboto', sans-serif;
-        }
+      body {
+        padding-top: 20px;
+        background: linear-gradient(to right, #add8e6 0%, #dda0dd 100%);
+        color: #fff;
+        font-family: "Roboto", sans-serif;
+      }
+      .container {
+        max-width: 600px;
+        background-color: rgba(255, 255, 255, 0.8);
+        border-radius: 8px;
+        padding: 20px;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        margin-top: 40px;
+      }
+      h1 {
+        font-family: "Roboto", sans-serif;
+        font-size: 32px;
+        color: #2575fc;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+        letter-spacing: 1.5px;
+        word-spacing: 3px;
+        text-align: center;
+      }
+      .form-group input[type="file"] {
+        color: #000;
+        border: 2px solid #007bff;
+        display: block;
+        padding: 6px 12px;
+        border-radius: 4px;
+        transition: border 0.3s ease;
+      }
+      .form-group input[type="file"]:hover,
+      .form-group input[type="file"]:focus {
+        border-color: #0056b3;
+        box-shadow: 0 0 8px rgba(0, 86, 179, 0.5);
+      }
+      .btn-primary {
+        background-color: #2575fc;
+        border-color: #2575fc;
+        box-shadow: none;
+        border-radius: 4px;
+        padding: 10px 15px;
+        font-size: 16px;
+        transition: background-color 0.3s ease;
+      }
+      .btn-primary:hover {
+        background-color: #0056b3;
+        border-color: #004b9e;
+      }
+      .btn-primary:focus,
+      .btn-primary:active {
+        box-shadow: 0 0 0 2px rgba(0, 123, 255, 0.5);
+      }
+      h2 {
+        font-family: "Roboto", sans-serif;
+        font-size: 26px;
+        color: #9932cc;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+        letter-spacing: 1.5px;
+        word-spacing: 3px;
+        text-align: center;
+      }
+      @media (max-width: 768px) {
         .container {
-            max-width: 600px;
-            background-color: rgba(255, 255, 255, 0.8);
-            border-radius: 8px;
-            padding: 20px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            margin-top: 40px;
+          margin-top: 20px;
+          padding: 15px;
         }
-        h1 {
-            font-family: 'Roboto', sans-serif;
-            font-size: 32px;
-            color: #2575fc;
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.2);
-            letter-spacing: 1.5px;
-            word-spacing: 3px;
-            text-align: center;
-        }
-        .form-group input[type="file"] {
-            color: #000;
-            border: 2px solid #007bff;
-            display: block;
-            padding: 6px 12px;
-            border-radius: 4px;
-            transition: border 0.3s ease;
-        }
-        .form-group input[type="file"]:hover, .form-group input[type="file"]:focus {
-            border-color: #0056b3;
-            box-shadow: 0 0 8px rgba(0, 86, 179, 0.5);
-        }
-        .btn-primary {
-            background-color: #2575fc;
-            border-color: #2575fc;
-            box-shadow: none;
-            border-radius: 4px;
-            padding: 10px 15px;
-            font-size: 16px;
-            transition: background-color 0.3s ease;
-        }
-        .btn-primary:hover {
-            background-color: #0056b3;
-            border-color: #004b9e;
-        }
-        .btn-primary:focus, .btn-primary:active {
-            box-shadow: 0 0 0 2px rgba(0, 123, 255, 0.5);
-        }
-        h2 {
-            font-family: 'Roboto', sans-serif;
-            font-size: 26px;
-            color: #9932CC;
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.2);
-            letter-spacing: 1.5px;
-            word-spacing: 3px;
-            text-align: center;
-        }
-        @media (max-width: 768px) {
-            .container {
-                margin-top: 20px;
-                padding: 15px;
-            }
-        }
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <h1 class="mb-4 text-center">SociAl: Social Network Analysis and Visualization</h1>
-        <h2 class="mb-4 text-center">Upload Network Data</h2>
-        <div class="card">
-            <div class="card-body">
-                <form action="" method="post" enctype="multipart/form-data" class="d-flex flex-column align-items-center">
-                    <div class="form-group">
-                        <input type="file" name="file" class="form-control-file">
-                    </div>
-                    <button type="submit" class="btn btn-primary">Upload</button>
-                </form>
+      <h1 class="mb-4 text-center">
+        SociAl: Social Network Analysis and Visualization
+      </h1>
+      <h2 class="mb-4 text-center">Upload Network Data</h2>
+      <div class="card">
+        <div class="card-body">
+          <form
+            action=""
+            method="post"
+            enctype="multipart/form-data"
+            class="d-flex flex-column align-items-center"
+          >
+            <div class="form-group">
+              <input type="file" name="file" class="form-control-file" />
             </div>
+            <button type="submit" class="btn btn-primary">Upload</button>
+          </form>
         </div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
