update graphSAGE model

--- a/templates/analyze.html
+++ b/templates/analyze.html
@@ -55,45 +55,40 @@
         }
 
         .btn-primary {
-            background-color: #2575fc; /* 更鲜艳的蓝色 */
-            border-color: #2063d6; /* 深一点的蓝色边框 */
-        }
+            background-color: #2575fc;
+            border-color: #2063d6; 
 
         .btn-secondary {
-            background-color: #6FA8DC; /* 更深的浅蓝色 */
-            border-color: #5E97D1; /* 与背景色相配的更深的边框颜色 */
+            background-color: #6FA8DC;
+            border-color: #5E97D1; 
         }
 
         .btn-info {
-            background-color: #BA55D3; /* 更深的浅紫色 */
-            border-color: #A94FD3; /* 与背景色相配的更深的边框颜色 */
+            background-color: #BA55D3; 
+            border-color: #A94FD3; 
         }
 
         .btn-secondary:hover {
-            background-color: #5E97D1; /* 悬停时的颜色更深 */
-            border-color: #5378C3; /* 悬停时的边框颜色也相应变深 */
+            background-color: #5E97D1; 
+            border-color: #5378C3;
         }
 
         .btn-info:hover {
-            background-color: #A94FD3; /* 悬停时的颜色更深 */
-            border-color: #983BCE; /* 悬停时的边框颜色也相应变深 */
+            background-color: #A94FD3; 
+            border-color: #983BCE; 
         }
 
         .btn:focus, .btn:active {
-            box-shadow: 0 0 0 2px rgba(37, 117, 252, 0.5); /* 主按钮焦点样式保持不变 */
+            box-shadow: 0 0 0 2px rgba(37, 117, 252, 0.5); 
         }
 
         .btn-secondary:focus, .btn-secondary:active {
-            box-shadow: 0 0 0 2px rgba(110, 168, 220, 0.5); /* 为更深的浅蓝色按钮调整焦点和活动状态的阴影颜色 */
+            box-shadow: 0 0 0 2px rgba(110, 168, 220, 0.5); 
         }
 
         .btn-info:focus, .btn-info:active {
-            box-shadow: 0 0 0 2px rgba(186, 85, 211, 0.5); /* 为更深的浅紫色按钮调整焦点和活动状态的阴影颜色 */
+            box-shadow: 0 0 0 2px rgba(186, 85, 211, 0.5); 
         }
-
-
-
-
         @media (max-width: 768px) {
             .container {
                 margin-top: 20px;
