--- a/templates/index.html
+++ b/templates/index.html
@@ -56,43 +56,43 @@
       }
 
       .btn-primary {
-        background-color: #2575fc; /* 更鲜艳的蓝色 */
-        border-color: #2063d6; /* 深一点的蓝色边框 */
+        background-color: #2575fc; 
+        border-color: #2063d6; 
       }
 
       .btn-secondary {
-        background-color: #6fa8dc; /* 更深的浅蓝色 */
-        border-color: #5e97d1; /* 与背景色相配的更深的边框颜色 */
+        background-color: #6fa8dc; 
+        border-color: #5e97d1; 
       }
 
       .btn-info {
-        background-color: #ba55d3; /* 更深的浅紫色 */
-        border-color: #a94fd3; /* 与背景色相配的更深的边框颜色 */
+        background-color: #ba55d3; 
+        border-color: #a94fd3; 
       }
 
       .btn-secondary:hover {
-        background-color: #5e97d1; /* 悬停时的颜色更深 */
-        border-color: #5378c3; /* 悬停时的边框颜色也相应变深 */
+        background-color: #5e97d1; 
+        border-color: #5378c3; 
       }
 
       .btn-info:hover {
-        background-color: #a94fd3; /* 悬停时的颜色更深 */
-        border-color: #983bce; /* 悬停时的边框颜色也相应变深 */
+        background-color: #a94fd3; 
+        border-color: #983bce; 
       }
 
       .btn:focus,
       .btn:active {
-        box-shadow: 0 0 0 2px rgba(37, 117, 252, 0.5); /* 主按钮焦点样式保持不变 */
+        box-shadow: 0 0 0 2px rgba(37, 117, 252, 0.5);
       }
 
       .btn-secondary:focus,
       .btn-secondary:active {
-        box-shadow: 0 0 0 2px rgba(110, 168, 220, 0.5); /* 为更深的浅蓝色按钮调整焦点和活动状态的阴影颜色 */
+        box-shadow: 0 0 0 2px rgba(110, 168, 220, 0.5); 
       }
 
       .btn-info:focus,
       .btn-info:active {
-        box-shadow: 0 0 0 2px rgba(186, 85, 211, 0.5); /* 为更深的浅紫色按钮调整焦点和活动状态的阴影颜色 */
+        box-shadow: 0 0 0 2px rgba(186, 85, 211, 0.5); 
       }
 
       /* Additional styles for better UI */
@@ -254,7 +254,7 @@
             console.log(error);
             document.getElementById("pathResult").innerHTML =
               '<p class="alert alert-danger">An error occurred while processing your request.</p>';
-            // 出错时也显示结果容器，显示错误信息
+            
             document.getElementById("pathResult").style.display = "block";
           },
         });
