--- a/templates/dataProcess.html
+++ b/templates/dataProcess.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GraphSAGE Processing</title>
+    <title>Data Processing</title>
     <link
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
       rel="stylesheet"
@@ -46,14 +46,7 @@
         color: #495057;
       }
       .btn {
-        display: in-line;
         height: 50px;
-      }
-      .buttonsLayout {
-        display: flex;
-        justify-content: space-between;
-        flex-direction: row;
-        align-items: center;
       }
       .alert {
         margin-top: 40px;
@@ -64,9 +57,9 @@
   </head>
   <body>
     <div class="container">
-      <h2>GraphSAGE Document Processing</h2>
+      <h2>User Data Processing</h2>
 
-      <div id="processMessage" class="legend" style="display: none">
+      <div id="processMessage" class="legend"  style="display: none">
         Processing...
       </div>
 
@@ -77,19 +70,42 @@
         {% endfor %}
       </div>
       {% endif %} {% endwith %}
-      <div class="buttonsLayout">
+      <div class="d-flex justify-content-around mb-3">
+      <button id="graphSAGEProcess" class="btn btn-primary mt-3" onclick="handleSubmit('/process_graphsage')" {% if session.get('process_success', False) %}disabled{% endif %}>
+        Process with GraphSAGE
+      </button>
+      <button id="node2VecProcess" class="btn btn-warning mt-3" onclick="handleSubmit('/process_node2vec')"{% if session.get('process_success', False) %}disabled{% endif %}>
+        Process with Node2Vec
+      </button>
+      </div>
+
+      <div id="loadingArea" style="display: none" class="text-center">
+        <div class="progress">
+          <div
+            class="progress-bar progress-bar-striped progress-bar-animated"
+            role="progressbar"
+            style="width: 100%"
+            aria-valuenow="100"
+            aria-valuemin="0"
+            aria-valuemax="100"
+          ></div>
+        </div>
+        <p class="text-secondary">Data Processing, Please wait...</p>
+      </div>
+
+      <div class="d-flex justify-content-around">
         <button id="downloadButton" class="btn btn-info mt-3" onclick="downloadProcessedFile()"
         {% if not session.get('upload_success', False) or not session.get('process_success', False) %}disabled{% endif %}>
     Download CSV
 </button>
-<button id="goVisualizationDataUpload" class="btn btn-success mt-3" onclick="window.location.href='/upload_to_vis'"
+<button id="goVisualizationDataUpload" class="btn btn-success mt-3" onclick="handleGoAnalyze()"
         {% if not session.get('upload_success', False) or not session.get('process_success', False) %}disabled{% endif %}>
     Go to Analyze
 </button>
         <button
           id="goHomePage"
           class="btn btn-secondary mt-3"
-          onclick="window.location.href='/'"
+          onclick="window.location.href='/user_data_adoper'"
         >
           Go Back to Upload
         </button>
@@ -105,7 +121,25 @@
       function downloadProcessedFile() {
         window.location.href = "/download_processed_file";
       }
+      function showLoading() {
+        document.getElementById("loadingArea").style.display = "block";
+      }
+      function handleSubmit(url) {
+        showLoading(); 
+        setTimeout(function() {
+            window.location.href = url; 
+        }, 500); 
+      }
 
+      let reminded = 0;
+      function handleGoAnalyze() {
+        if (reminded === 1) {
+          window.location.href = "/upload_to_vis";
+        } else {
+          alert("Don't forget download the file before leaving.");
+          reminded = 1;
+        }
+      }
     </script>
   </body>
 </html>
